--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -11,7 +11,7 @@ vignette: >
 
 
 
-The R package `pmsignature` is developed 
+The R package *pmsignature* is developed 
 for efficiently extracting characteristic mutation patterns (mutation signatures) 
 from the set of mutations collected typically from cancer genome sequencing data.
 
@@ -19,10 +19,10 @@ For extracting mutation signatures,
 principal component analysis or nonnegative matrix factorization have been popular.
 Compared to these existing approaches, the `pmsignature` has following advantages:
 
-1. `pmsignature` can perform robust estimation of mutation signatures even taking account for many mutation features such as two bases 5' and 3' to the mutated sites.
-1. `pmsignature` provides intuitively interetable visualization of mutation signatures, which is reminicent of sequencing logos.
+1. *pmsignature* can perform robust estimation of mutation signatures even taking account for many mutation features such as two bases 5' and 3' to the mutated sites.
+1. *pmsignature* provides intuitively interetable visualization of mutation signatures, which is reminicent of sequencing logos.
 
-Currently, `pmsignature` can only accept tab delimited text files with specialized format. 
+Currently, *pmsignature* can only accept tab delimited text files with specialized format. 
 We will improve the program so that it can accept VCF format files.
 
 ## Paper
@@ -31,46 +31,68 @@ We will improve the program so that it can accept VCF format files.
 
 ## Input data
 
-The input data must be a tab-delimited text file.
-An example of input data for `pmsignature` is as follows:
+For input data, we need mutation feature data for each sample and mutation.
+Here, **mutation features** are elements used for categorize the mutations such as: 
 
-  1 | 2 | 3 | 4 | 5 | 6 | 7 |
-----|---|---|---|---|---|---|
- 26 | 6 |   |   |   |   |   |
-  6 | 4 | 4 | 4 | 4 | 2 |   |
-  1 | 4 | 4 | 4 | 3 | 3 | 2 |
-  2 | 4 | 3 | 3 | 1 | 1 | 2 |
-  3 | 4 | 4 | 3 | 2 | 2 | 2 |
-  4 | 3 | 3 | 2 | 3 | 3 | 1 |
-  5 | 3 | 4 | 2 | 4 | 4 | 2 |
-  6 | 4 | 1 | 4 | 2 | 1 | 2 |
-  3 | 2 | 1 | 1 | 1 | 1 | 2 |
-  7 | 4 | 2 | 2 | 4 | 3 | 2 |
+* 6 substitutions (C>A, C>G, C>T, T>A, T>C and T>G)
+* 5’ and 3’ flanking bases (A, C, G and T)
+* transcription direction.
 
-- The first row shows the number of cancer genomes and mutation features
-(here, the number of cancer genome and mutation features are 26 and 6, respectively).
+Currently, *pmsignature* can accept following two formats of tab-delimited text file.
 
-- The second row shows the possible number of values that each mutation feature can take.
-In this example, they consider substitution patterns (6 values, C>A, C>G, C>T, T>A, T>C and T>G),
-two 5' and 3' flanking bases (4 values for each 4 site, A, C, G and T)
-and transcription direction (2 values, + and -).
 
-- The third and later rows show the mutation features for each mutation. The first column shows the index of cancer genome. From the second to last columns shows the value of mutation features.
+### Mutation Position Format
 
-mutation feature
-: elements used for categorize the mutations. 
-Typically 6 substitutions (C>A, C>G, C>T, T>A, T>C and T>G), 
-5' and 3' flanking bases (A, C, G and T), and transcription direction.
+|---------|------|-----|---|---|
+| sample1 | chr1 | 100 | A | C |
+| sample1 | chr1 | 200 | A | T |
+| sample1 | chr2 | 100 | G | T |
+| sample2 | chr1 | 300 | T | C |
+| sample3 | chr3 | 400 | T | C |
+
+* The 1st column shows the name of samples 
+* The 2nd column shows the name of chromosome 
+* The 3rd column shows the coordinate in the chromosome
+* The 4th column shows the reference base (A, C, G, or T).
+* The 5th colum shows the alternate base (A, C, G, or T).
+  
+  
+### Mutation Feature Vector Format
+
+|----|---|---|---|---|---|---|
+|  1 | 4 | 4 | 4 | 3 | 3 | 2 |
+|  2 | 4 | 3 | 3 | 1 | 1 | 2 |
+|  3 | 4 | 4 | 3 | 2 | 2 | 2 |
+|  4 | 3 | 3 | 2 | 3 | 3 | 1 |
+|  5 | 3 | 4 | 2 | 4 | 4 | 2 |
+|  6 | 4 | 1 | 4 | 2 | 1 | 2 |
+|  3 | 2 | 1 | 1 | 1 | 1 | 2 |
+|  7 | 4 | 2 | 2 | 4 | 3 | 2 |
+
+* The 1st column shows the name of samples 
+* From the 2nd to the last column show the value of mutation features.
+* In this example, substitution patterns (6 values, C>A, C>G, C>T, T>A, T>C and T>G), two 5' and 3' flanking bases (4 values for each 4 site, A, C, G and T)
+and transcription direction (2 values, + and -) are considered.
 
 
 ## Workflow
 
 ### Install the package
 
-The easiest way is to use the package `devtools`:
+First, the R packages *VariantAnnotation* and *BSgenome.Hsapiens.UCSC.hg19*,
+which *pmsignature* depends has to be installed.
+Also, *devtools* may be necessary for ease of installation.
 
 ```
-devtools::install_github("friend1ws/pmsignature");
+source("http://bioconductor.org/biocLite.R")
+biocLite(c("VariantAnnotation", "BSgenome.Hsapiens.UCSC.hg19"))
+install.pakages("devtools")
+```
+
+The easiest way for installing *pmsignature* is to use the package *devtools*:
+
+```
+devtools::install_github("friend1ws/pmsignature")
 ```
 
 
@@ -79,19 +101,12 @@ devtools::install_github("friend1ws/pmsignature");
 
 First, create the input data from your mutation data.
 
-After installing `pmsignature`,
+After installing *pmsignature*,
 you can find the above example file at the directory where pmsignature is installed.
 
 ```
 inputFile <- system.file("extdata", "hoang.ind5_dir.txt", package="pmsignature");
 ```
-
-For converting your own mutation list data,
-the [script](https://twitter.com/hadleywickham/status/504368538874703872) 
-we prepared might be helpful.
-
-We are now improving the implementation so that the package can handle 
-the most typical format for mutation data is VCF format.
 
 Also, you might want to use the background signature files.
 The background data used in the original paper can be found at:
@@ -104,8 +119,10 @@ bgFile <- system.file("bgdata", "bg.ind5_dir.txt", package="pmsignature");
 
 Type the following commands:
 ```
-G <- readRawMutFile(inputFile);
+G <- readMutFile(inputFile, numBases = 5);
 ```
+
+Here, *inputFile* is the path for the input file. *numBases* is the number of flanking bases to consider (if you want to consider two 5' and 3' bases, then set 5).
 
 Also, you want to read the background signature files as follow:
 
