--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -108,13 +108,13 @@ you can find the above example file at the directory where pmsignature is instal
 * Mutation Position Format
 ```
 inputFile <- system.file("extdata/Nik_Zainal_2012.mutationPositionFormat.txt", package="pmsignature");
-head(inputFile);
+print(inputFile);
 ```
 
 * Mutation Feature Vector Format
 ```
 inputFile <- system.file("extdata/Hoang_MFVF.txt", package="pmsignature");
-head(inputFile);
+print(inputFile);
 ```
 
 
